--- a/src/style.css
+++ b/src/style.css
@@ -70,7 +70,7 @@ form {
   padding: 14px 24px;
 }
 
-.grocery {
+.restaurant {
   font-size: 16px;
   text-align: left;
   background-color: white;
@@ -80,7 +80,7 @@ form {
   box-shadow: 0px 4px 30px rgba (39, 33, 65, 0.03);
 }
 
-.grocery strong {
+.restaurant strong {
   color: blueviolet;
 }
 
