--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 body {
   background: whitesmoke;
-  background-image: url("grocery.jpg");
+  background-image: url("lampshade.jpg");
   background-size: 100%;
   text-align: center;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
@@ -13,6 +13,7 @@ body {
   margin-bottom: 30px;
   border-radius: 10px;
   background-color: white;
+  opacity: 0.5;
 }
 
 h1 {
